[package]
name = "postcss-rust"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-nanoid = "0.1.0"
regex = "1.7.1"
onig = "6.4.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
